compiler/typ/tests/fixtures/diagnostics/0196_adt_record_update_bool_field_07.ml.infer.expected
File "0196_adt_record_update_bool_field_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0196_adt_record_update_bool_field_07 is not a valid module name.

File "0196_adt_record_update_bool_field_07.ml", line 3, characters 31-32:
3 | let _ = { base_eta with seen = 7 }
                                   ^
Error: The constant 7 has type int but an expression was expected of type
         bool
